# center-surround

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gabor_fit_analysis.py  setup.py  setup.sh
activeloop/datasets/: __init__.py  demo_rendered_dataset.py
activeloop/generators/: __init__.py  demo_generator.py
activeloop/schema/: __init__.py  main.py  rendered_images.py
activeloop/schema/cloud_storage/: cloud_dataset.py
activeloop/schema/templates/: rendered_images.py
experiments_convnext/: coen_cagli_batched.py  gabor_fit_analysis.py  get_sizes.py  outpainted_similarity.py  perform_grating_exps.py  perform_optimization_center_surround.py  pyproject.toml
heeger_divisive_norm/: Heeger_divisive_norm.py
notebooks/Large_scale_dataset/: demo_imagenet_5M.ipynb
notebooks/create_rendered_dataset/: pipeline_demo.ipynb
notebooks/deeplake_demo/: best_natural_images_through_deeplake.ipynb  demo_imagenet.ipynb  demo_monkey_responses.ipynb
notebooks/load_neuronal_predictive_models/: v1_state_of_the_art_model.ipynb  v4_state_of_the_art_model.ipynb
notebooks/train_v1_v4/: train_v1.py  train_v1_v4.ipynb
scripts/: prepare_v1_data.sh
surroundmodulation/: analyses.py  models.py
surroundmodulation/datasets/: __init__.py  monkey_loaders.py
